examples/kubernetes/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  namespace: matomo
spec:
  ports:
  - name: web
    protocol: TCP
    port: 8000
  selector:
    app: matomo
  type: NodePort
