examples/kubernetes/05-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matomo-ingress
  namespace: matomo
  annotations:
#    ingress.kubernetes.io/ssl-redirect: "true"
#    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: insights.iatros.app
      http:
        paths:
          - path: /
            backend:
              serviceName: matomo
              servicePort: 8000
#  tls:
#    - hosts:
#      - matomo.example.com
#      secretName: matomo-ingress-tls
